prod/namespace.wazuh.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: wazuh
  name: wazuh
spec:
  finalizers:
  - kubernetes
