prod/service.wazuh.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wazuh-manager
  name: wazuh-cluster
  namespace: wazuh
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: cluster
    port: 1516
    protocol: TCP
    targetPort: 1516
  selector:
    app: wazuh-manager
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wazuh-indexer
  name: wazuh-indexer
  namespace: wazuh
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: indexer-nodes
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: wazuh-indexer
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wazuh-dashboard
  name: dashboard
  namespace: wazuh
spec:
  type: LoadBalancer
  selector:
    app: wazuh-dashboard
  ports:
    - name: dashboard
      port: 443
      targetPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wazuh-manager
  name: wazuh
  namespace: wazuh
  annotations:  
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
spec:
  type: LoadBalancer
  selector:
    app: wazuh-manager
    node-type: conductor
  ports:
    - name: api
      port: 55000
      targetPort: 55000
    - name: registration
      port: 1515
      targetPort: 1515

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/ip-allocated-from-pool: first-pool
  labels:
    app: wazuh-manager
  name: wazuh-workers
  namespace: wazuh
spec:
  ports:
  - name: agents-events
    port: 1514
    protocol: TCP
    targetPort: 1514
  selector:
    app: wazuh-manager
    node-type: worker
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wazuh-indexer
  name: indexer
  namespace: wazuh
spec:
  ports:
  - name: indexer-rest
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: wazuh-indexer
  type: ClusterIP
